--- a/week2/index.html
+++ b/week2/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="img">
-  <img src="assets/circle-of-fifths-scale.jpg">
-</div>
+  <div class="container">
 
+
+<div class="text">
     <h1>Seven Principles of Typographic Contrast </h1> <br>
     <h4>
       In a seminal booklet that he both designed and wrote,Carl Dair showed 
@@ -138,9 +138,8 @@
       doing. I've found Carl Dair's analysis of typographic contrast -- and especially the visual flair with which he presents 
       it -- an invaluable tool in the practice of graphic design.
     </p>
-</body>
+  </div>
+  <img class="img" src="assets/circle-of-fifths-scale.jpg" >
 
-<footer>
-  <a href="https://webtype.htmlkitchen.net/exercises/01-layouts-positioning/">Classlink</a>
-</footer>
-</html>
+  </div>
+</body>
